--- a/lib/root.css
+++ b/lib/root.css
@@ -1,54 +1,158 @@
-body {
-  text-align: center;
-  margin: 0;
-  font-family: sans-serif;
+:root {
+  --bg-color: rgb(20, 20, 20);
+  --header-footer-height: 70px;
+}
 
-  background: linear-gradient(135deg, rgba(255,0,0,1) 0%, rgba(255,255,255,1) 10%, rgba(255,255,255,1) 49%, rgba(255,255,255,1) 90%, rgba(255,0,0,1) 100%);
+body {
+  background-color: var(--bg-color);
+  color: white;
+  font-family: sans-serif;
+  margin: 0;
+  padding: 0;
+}
+
+h1 {
+  color: white;
+  margin: 10px;
+  z-index: 5;
+}
+
+h2 {
+  color: #c90909;
+  margin: 10px;
+}
+
+h3 {
+  margin: 10px;
+}
+
+hr {
+  border-color: #444;
+  margin-bottom: 10px;
+  margin-top: 20px;
+  width: 100%;
+}
+
+.header,
+.footer {
+  height: var(--header-footer-height);
+  position: fixed;
+  text-align: center;
+  top: 0;
+  width: 100%;
+  z-index: 4;
+}
+
+.header {
+  background: linear-gradient(180deg, rgba(220,20,20,1) 0%, rgba(150,20,20,1) 25%, rgba(20,20,20,0) 100%);
+  top: 0;
+}
+
+.footer {
+  background: linear-gradient(0deg, rgba(220,20,20,1) 0%, rgba(150,20,20,1) 25%, rgba(20,20,20,0) 100%);
+  top: calc(100% - var(--header-footer-height));
+}
+
+.outer {
+  align-items: center;
+  display: flex;
+  flex-direction: column;
+  text-align: center;
+  margin-left: auto;
+  margin-right: auto;
+  max-width: 916px;
 }
 
 .cards {
   display: flex;
-  justify-content: center;
   flex-wrap: wrap;
+  gap: 8px;
+  justify-content: center;
+  max-width: 916px;
+}
+
+.cards:hover .card:after {
+  opacity: 1;
 }
 
 .card {
+  background-color: rgba(255, 255, 255, 0.1);
+  border-radius: 10px;
+  cursor: pointer;
+  height: 150px;
+  position: relative;
+  width: 300px;
+}
+
+.card:hover::before {
+  opacity: 1;
+}
+
+.card::before,
+.card::after {
+  border-radius: inherit;
+  content: "";
+  height: 100%;
+  left: 0;
+  opacity: 0;
+  position: absolute;
+  top: 0;
+  transition: opacity 500ms;
+  width: 100%;
+}
+
+.card::before {
+  background: radial-gradient(
+    800px circle at var(--mouse-x) var(--mouse-y),
+    rgba(255, 0, 0, 0.3),
+    transparent 40%
+  );
+  z-index: 3;
+}
+
+.card::after {
+  background: radial-gradient(
+    400px circle at var(--mouse-x) var(--mouse-y),
+    rgba(255, 0, 0, 1),
+    transparent 40%
+  );
+  z-index: 1;
+}
+
+.card > .card-content {
+  background-color: rgb(30, 30, 30);
+  border-radius: inherit;
+  position: absolute;
+  inset: 4px;
+  z-index: 2;
+  
   display: flex;
   flex-direction: column;
-  padding: 20px 20px 5px 20px;
-  border: 1px solid #ccc;
-  text-decoration: none;
-  text-align: center;
-  width: 200px;
-  margin: 5px;
-  vertical-align: top;
-  transition: 0.3s;
+  padding: 15px 20px 5px 20px;
 }
 
-.card.wide {
-  width: 250px;
-}
-
-.card:hover {
-  border: 5px solid red;
-}
-
-.card .title {
-  color: black;
+.card > .card-content > .title {
+  color: white;
   font-size: large;
   padding: 5px;
   text-decoration: underline;
+  text-decoration-thickness: 3px;
   font-weight: bold;
   text-decoration-color: red;
 }
+
 .card .desc {
   display: block;
-  color: #444;
+  color: #999;
   margin-bottom: 5px;
 }
 
 .icons {
   margin-top: auto;
+  margin-bottom: auto;
+  display: flex;
+  justify-content: center;
+  gap: 8px;
 }
 
 icon {
@@ -57,6 +161,7 @@ icon {
   height: 32px;
   background-size: contain;
   background-repeat: no-repeat;
+  background-position: center;
 }
 
 icon.c-sharp {
