Added card for this site, css3 icon

--- a/lib/root.css
+++ b/lib/root.css
@@ -190,3 +190,7 @@ icon.ko {
 icon.jq {
   background-image: url('/lib/jQuery.png');
 }
+
+icon.css3 {
+  background-image: url('/lib/css3.png');
+}
