--- a/lib/root.css
+++ b/lib/root.css
@@ -9,46 +9,82 @@ body {
   font-family: sans-serif;
   margin: 0;
   padding: 0;
+  overflow: hidden;
+}
+
+h1,
+h2 {
+  background: linear-gradient(
+    90deg,
+    transparent,
+    black 30%,
+    black 70%,
+    transparent
+  );
 }
 
 h1 {
-  color: white;
-  margin: 10px;
-  z-index: 5;
+  text-align: center;
+  line-height: 50px;
+  margin: 0;
 }
 
 h2 {
   color: #c90909;
-  margin: 10px;
+  margin: 0;
+  position: sticky;
+  top: 0;
+  z-index: 10;
+  width: 100%;
+  padding: 10px 0;
 }
 
 h3 {
   margin: 10px;
 }
 
-hr {
-  border-color: #444;
-  margin-bottom: 10px;
-  margin-top: 20px;
-  width: 100%;
-}
-
-.header,
-.footer {
-  background: radial-gradient(rgba(220,20,20,0.8) 0%, rgba(20,20,22,0) 90%);
-  height: var(--header-footer-height);
-  position: fixed;
-  text-align: center;
-  width: 100%;
-  z-index: 4;
+@keyframes rotate {
+  from {
+    stroke-dashoffset: 0;
+  }
+  to {
+    stroke-dashoffset: 100;
+  }
 }
 
 .header {
-  position: absolute;
-  top: calc(var(--header-footer-height) / 2 * -1);
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  position: fixed;
+  z-index: -1;
+  width: 100vw;
+  height: 100vh;
+  background: radial-gradient(#ccc 10px, transparent 55vh);
+
+  svg {
+    height: 90vh;
+    ellipse {
+      fill: url(#Background);
+      stroke: #fff5;
+      stroke-width: 1px;
+      stroke-dasharray: 5, 1, 0, 4;
+      stroke-linecap: round;
+      animation: rotate 10000ms linear infinite;
+    }
+  }
 }
 
 .footer {
+  background: radial-gradient(
+    rgba(220, 20, 20, 0.8) 0%,
+    rgba(20, 20, 22, 0) 90%
+  );
+  height: var(--header-footer-height);
+  position: fixed;
+  text-align: center;
+  z-index: 4;
+
   bottom: calc(var(--header-footer-height) / 2 * -1);
 }
 
@@ -57,9 +93,10 @@ hr {
   display: flex;
   flex-direction: column;
   text-align: center;
-  margin-left: auto;
-  margin-right: auto;
-  max-width: 916px;
+  margin: 0 auto;
+  overflow-y: scroll;
+  height: calc(100% - 50px);
+  scrollbar-color: #c90909 #0000;
 }
 
 .cards {
@@ -68,6 +105,7 @@ hr {
   gap: 8px;
   justify-content: center;
   max-width: 916px;
+  margin: 20px 0;
 }
 
 .cards:hover .card:after {
@@ -78,9 +116,10 @@ hr {
   background-color: rgba(255, 255, 255, 0.1);
   border-radius: 10px;
   cursor: pointer;
-  height: 150px;
+  height: 100px;
   position: relative;
   width: 300px;
+  transition: all 1000ms;
 }
 
 .card:hover::before {
@@ -119,15 +158,15 @@ hr {
 }
 
 .card > .card-content {
-  background-color: rgb(30, 30, 30);
+  background-color: rgb(30, 30, 30, 0.5);
   border-radius: inherit;
   position: absolute;
   inset: 4px;
   z-index: 2;
-  
+
   display: flex;
   flex-direction: column;
-  padding: 15px 20px 5px 20px;
+  padding: 5px 20px;
 }
 
 .card > .card-content > .title {
@@ -147,50 +186,66 @@ hr {
 }
 
 .icons {
-  margin-top: auto;
-  margin-bottom: auto;
-  display: flex;
-  justify-content: center;
   gap: 8px;
+  display: flex;
+  transition: all 1000ms;
+  margin: auto;
+}
+
+.card:hover {
+  height: 150px;
+
+  .icons {
+    width: initial;
+  }
+
+  icon {
+    width: 32px;
+  }
+}
+
+.desc {
+  margin: 0 20px;
 }
 
 icon {
   display: inline-block;
-  width: 32px;
-  height: 32px;
+  width: 10px;
+  aspect-ratio: 1;
   background-size: contain;
   background-repeat: no-repeat;
   background-position: center;
+  transition: all 1000ms;
 }
 
 icon.c-sharp {
-  background-image: url('/lib/c-sharp.png');
+  background-image: url("/lib/c-sharp.png");
 }
 
 icon.github {
-  background-image: url('/lib/github.png');
+  background-image: url("/lib/github.png");
 }
 
 icon.js {
-  background-image: url('/lib/js.png');
+  background-image: url("/lib/js.png");
 }
 
 icon.vue {
-  background-image: url('/lib/vue.png');
+  background-image: url("/lib/vue.png");
 }
 
 icon.vb {
-  background-image: url('/lib/vb.png');
+  background-image: url("/lib/vb.png");
 }
 
 icon.ko {
-  background-image: url('/lib/ko.png');
+  background-image: url("/lib/ko.png");
 }
 
 icon.jq {
-  background-image: url('/lib/jQuery.png');
+  background-image: url("/lib/jQuery.png");
 }
 
 icon.css3 {
-  background-image: url('/lib/css3.png');
+  background-image: url("/lib/css3.png");
 }
